--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "https://stupefied-newton-2cb9a5.netlify.app/"
 theme = "hugo-apero"
 languageCode = "en"
 title = "Sonia's Personal website"
@@ -108,7 +108,7 @@ enableEmoji = true
   # Configure header 
   [[menu.header]]
     name = "About"
-    title = "About Blogophonic"
+    title = "Project Portfolio"
     url = "/about/"
     weight = 1
   [[menu.header]]
